5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4190/executions/1679_1103.log
== TEST (2019-04-26 16:32:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input('Insira um valor para x: '))
a = float(input('Insira um valor para a: '))
b = float(input('Insira um valor para b: '))

if (b<=a):
	print('Entradas a e b invalidas')
elif(a<=x and x<=b):
	print(x' pertence ao intervalo', a,',', b)
else:
	print(x' nao pertence ao intervalo', a,',', b)
-- ERROR:
File "XXXX", line 11
    print(x' pertence ao intervalo', a,',', b)
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 16:33:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input('Insira um valor para x: '))
a = float(input('Insira um valor para a: '))
b = float(input('Insira um valor para b: '))

if (b<=a):
	print('Entradas a e b invalidas')
elif(a<=x and x<=b):
	print(x' pertence ao intervalo', a,',', b)
else:
	print(x' nao perte
-- ERROR:
File "XXXX", line 11
    print(x' pertence ao intervalo', a,',', b)
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 16:33:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input('Insira um valor para x: '))
a = float(input('Insira um valor para a: '))
b = float(input('Insira um valor para b: '))

if (b<=a):
	print('Entradas a e b invalidas')
elif(a<=x and x<=b):
	print(x' pertence ao intervalo', a,',', b)
else:
	print(x' nao pertence ao intervalo', a,',', b)
-- ERROR:
File "XXXX", line 11
    print(x' pertence ao intervalo', a,',', b)
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 16:35:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input('Insira um valor para x: '))
a = float(input('Insira um valor para a: '))
b = float(input('Insira um valor para b: '))

if (b<=a):
	print('Entradas a e b invalidas')
elif(a<=x and x<=b):
	print(x,' pertence ao intervalo', a,',', b)
else:
	print(x,' nao pertence ao intervalo', a,',', b)
-- OUTPUT:
2.0  nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 16:38:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input('Insira um valor para x: '))
a = float(input('Insira um valor para a: '))
b = float(input('Insira um valor para b: '))

if (b<=a):
	print('Entradas a e b invalidas')
elif(a<=x and x<=b):
	print(x,' pertence ao intervalo', a, ',', b)
else:
	print(x,' nao pertence ao intervalo', a, ',', b)
-- OUTPUT:
2.0  nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 16:40:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input('Insira um valor para x: '))
a = float(input('Insira um valor para a: '))
b = float(input('Insira um valor para b: '))

if (b<=a):
	print('Entradas a e b invalidas')
elif(a<=x and x<=b):
	print(x,' pertence ao intervalo', a,',', b)
else:
	print(x,' nao pertence ao intervalo', a,',', b)
-- OUTPUT:
2.0  nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 16:43:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input('Insira um valor para x: '))
a = float(input('Insira um valor para a: '))
b = float(input('Insira um valor para b: '))

if (b<=a):
	print('Entradas',a, 'e',b,'invalidas')
elif(a<=x and x<=b):
	print(x,'pertence ao intervalo', a, ',', b)
else:
	print(x,'nao pertence ao intervalo', a, ',', b)
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 16:45:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input('Insira um valor para x: '))
a = float(input('Insira um valor para a: '))
b = float(input('Insira um valor para b: '))

if (b<=a):
	print('Entradas',a, 'e',b,'invalidas')
elif(a<=x and x<=b):
	print(x,'pertence ao intervalo', a, ',', b)
else:
	print(x,'nao pertence ao intervalo', a, ',', b)
-- EXECUTION TIME:
0.156313
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
